# ErisPulse-Dashboard

./: README.md  pyproject.toml
ErisPulse_Dashboard/: Core.py
ErisPulse_Dashboard/static/: dash.css  dash.html  dash.js
