[project]
name = "ErisPulse-Dashboard"
version = "1.0.0"
description = "ErisPulse Dashboard Module"
requires-python = ">=3.10"
dependencies = [
]

[project.entry-points]
"erispulse.module" = { "Dashboard" = "ErisPulse_Dashboard:Main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ErisPulse_Dashboard"]
