[project]
name = "ErisPulse-Dashboard"
version = "1.4.5"
description = "ErisPulse Dashboard Module"
requires-python = ">=3.10"
dependencies = [
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
]

[project.entry-points]
"erispulse.module" = { "Dashboard" = "ErisPulse_Dashboard:Main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ErisPulse_Dashboard"]
